--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@ description: portfolio
   <h4>I Code for Fun</h4>
   <div>
   <p>
-    Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar; always a work in progress. Here is what I am currently working on. Some are final products. Some are my deformed child.
+    My side hustle is freelancing websites. I build every website from scratch using Jekyll to pull it all together. Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar; always a work in progress. Here is what I am currently working on. Some are final products. Some are my deformed child.
   </p>
 </div>
 <!-- Link out to websites -->
@@ -25,9 +25,21 @@ description: portfolio
 
 </section>
 
-<section>
+<section class="grid">
+  <div class="col-6">
   <h4>Give Back</h4>
   <p>
     Do you know of a non-profit that needs a website? Since I am usually bouncing from place to place I volunteer my time by building sites for non-profit organizations. Currently working on Ageless Aviation Dreams Foundation. Will have a space available this fall. Email me with inquires.
   </p>
+  </div>
+  <div class="col-6">
+    <h4>Currently Learning</h4>
+    <p>
+      Continuously learning is something so important to me. No matter what role I'm in I like to stretch my mind, expand my horizons, and put my free time to good use. 
+    </p>
+    <ul>
+      <li>JavaScript - Udemy</li>
+      <li>Google Analytics - Google Analytics Academy</li>
+    </ul>
+  </div>
 </section>
