--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@ description: portfolio
 <h4>One Rule. One Rule Only.</h4>
 <h6 class="tagline">I Only work where I can wear yoga pants</h6>
 <p>Spandex are life nd my life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
-<a class="button centered" href="../pdf/FunResume.pdf">Download Resume</a>
+<a class="button centered" href="../pdf/funresume.pdf">Download Resume</a>
 </div>
 </section>
 
@@ -35,7 +35,7 @@ description: portfolio
   <div class="col-6">
     <h4>Currently Learning</h4>
     <p>
-      Continuously learning is something so important to me. No matter what role I'm in I like to stretch my mind, expand my horizons, and put my free time to good use. 
+      Continuously learning is something so important to me. No matter what role I'm in I like to stretch my mind, expand my horizons, and put my free time to good use.
     </p>
     <ul>
       <li>JavaScript - Udemy</li>
