--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@ featured-image_path: images/whitedesk.jpg
       <br />
     </p>
     <br />
-    <hr />
   </section>
 
- <!-- THIRD: BLOG SECTION -->
+ <!-- BLOG SECTION -->
     <section class="container feedpost">
       <h2 class="centered"> This just in... </h2>
 
@@ -45,13 +44,46 @@ featured-image_path: images/whitedesk.jpg
             </div>
           {% endfor %}
       </div>
+      <div>
+        <a class="button" href="/blog.html">More Posts</a>
+      </div>
     </section>
 
+    <!-- BOX IMAGES PROJECTS  -->
 
-<!-- THIS IS THE PROJECTS SECTION ---->
+    <section class="no-padding featured">
+      <div class="grid-equalHeight">
+        <div class="col-4_sm-12-middle ">
+          <h3> I Code For Fun </h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
+          <a class="button" href="/portfolio.html"></a>
+        </div>
+        <div class="col-4_sm-12 box-img">
+          <!-- ADD BACKGROUND IMAGE -->
+        </div>
+        <div class="col-4_sm-12-middle">
+          <h3> Give Back </h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
+        </div>
+      </div> <!-- end grid -->
+      <div class="grid-equalHeight">
+        <div class="col box-img">
+          <!-- ADD BACKGROUND IMAGE -->
+        </div>
+        <div class="col-4_sm-12-middle">
+          <h3> Playlists </h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
+        </div>
+        <div class="col-4_sm-12 box-img">
+          <!-- ADD BACKGROUND IMAGE -->
+        </div>
+      </div> <!-- end grid -->
+
+
+<!-- THIS IS THE  RANDOM PROJECTS SECTION ---->
 <section class="grid-centered">
 <div class="col-6">
-  <h2>Side Hustle</h2>
+  <h2>Write Something Here</h2>
   <p>
     Here will be a section for all of my latest projects, volunteer work, and learning.
 
@@ -65,6 +97,18 @@ featured-image_path: images/whitedesk.jpg
 <iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="600" height="470" frameborder="0" allowtransparency="true"></iframe>
 
 </div>
+</section>
+
+
+<!-- Contact Section -->
+<section class="centered">
+  <h2>Say Hello </h2>
+  <p>treganowanl@gmail.com</p>
+  <nav class="social-nav centered">
+    <a target="blank" href="https://www.facebook.com/laura.treganowan"> <i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
+    <a target="blank" href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    <a target="blank" href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
+  </nav>
 </section>
 
 {% include instagram.html %}
