--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ featured-image_path: images/whitedesk.jpg
           <!-- ADD BACKGROUND IMAGE -->
         </div>
       </div> <!-- end grid -->
-
+</section>
 
 <!-- THIS IS THE  RANDOM PROJECTS SECTION ---->
 <section class="grid-centered">
@@ -101,7 +101,7 @@ featured-image_path: images/whitedesk.jpg
 
 
 <!-- Contact Section -->
-<section class="centered">
+<section class="centered featured">
   <h2>Say Hello </h2>
   <p>treganowanl@gmail.com</p>
   <nav class="social-nav centered">
