--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ featured-image_path: images/whitedesk.jpg
     <br />
   </section>
 
+  <!-- TAGLINE SECTIONS -->
+  <section class="quote featured">
+    <p>
+      "You may say that I'm a dreamer, but I'm not the only one"
+    </p>
+  </section>
+
  <!-- BLOG SECTION -->
     <section class="container feedpost">
       <h2 class="centered"> This just in... </h2>
@@ -101,7 +108,7 @@ featured-image_path: images/whitedesk.jpg
 
 
 <!-- Contact Section -->
-<section class="centered featured">
+<section class="center-text featured">
   <h2>Say Hello </h2>
   <p>treganowanl@gmail.com</p>
   <nav class="social-nav centered">
