--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ featured-image_path: images/whitedesk.jpg
         <div class="col-4_sm-12-middle ">
           <h3> I Code For Fun </h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
-          <a class="button" href="/portfolio.html"></a>
+          <a class="button center-text" href="/portfolio.html"></a>
         </div>
         <div class="col-4_sm-12 box-img">
           <!-- ADD BACKGROUND IMAGE -->
@@ -71,6 +71,7 @@ featured-image_path: images/whitedesk.jpg
         <div class="col-4_sm-12-middle">
           <h3> Give Back </h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
+          <a target="blank"class="button center-text" href="treganowanl@gmail.com">Contact Me</a>
         </div>
       </div> <!-- end grid -->
       <div class="grid-equalHeight">
@@ -78,8 +79,9 @@ featured-image_path: images/whitedesk.jpg
           <!-- ADD BACKGROUND IMAGE -->
         </div>
         <div class="col-4_sm-12-middle">
-          <h3> Playlists </h3>
+          <h3> Ride With Me</h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
+          <a target="blank"class="button center-text" href="#">Book Your Bike</a>
         </div>
         <div class="col-4_sm-12 box-img">
           <!-- ADD BACKGROUND IMAGE -->
