--- a/index.html
+++ b/index.html
@@ -54,40 +54,7 @@ featured-image_path: images/whitedesk.jpg
       <div>
         <a class="button" href="/blog.html">More Posts</a>
       </div>
-    </section> --> -->
-
-    <!-- BOX IMAGES PROJECTS  -->
-
-    <section class="no-padding featured">
-      <div class="grid-equalHeight">
-        <div class="col-4_sm-12-middle ">
-          <h3> Blog </h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
-            <a target="blank"class="button center-text" href="/portfolio.html">Portfolio</a>
-        </div>
-        <div class="col-4_sm-12 box-img">
-          <!-- ADD BACKGROUND IMAGE -->
-        </div>
-        <div class="col-4_sm-12-middle">
-          <h3> Side Hustle</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
-          <a target="blank"class="button center-text" href="treganowanl@gmail.com">Contact Me</a>
-        </div>
-      </div> <!-- end grid -->
-      <div class="grid-equalHeight">
-        <div class="col box-img">
-          <!-- ADD BACKGROUND IMAGE -->
-        </div>
-        <div class="col-4_sm-12-middle">
-          <h3> Ride With Me </h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
-          <a target="blank"class="button center-text" href="#">Book Your Bike</a>
-        </div>
-        <div class="col-4_sm-12 box-img">
-          <!-- ADD BACKGROUND IMAGE -->
-        </div>
-      </div> <!-- end grid -->
-</section>
+    </section> -->
 
 <!-- THIS IS THE  RANDOM PROJECTS SECTION ---->
 <section class="grid-centered">
@@ -108,6 +75,38 @@ featured-image_path: images/whitedesk.jpg
 </div>
 </section>
 
+<!-- BOX IMAGES PROJECTS  -->
+
+<section class="no-padding featured">
+  <div class="grid-equalHeight">
+    <div class="col-4_sm-12-middle ">
+      <h3> Blog </h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
+        <a target="blank"class="button center-text" href="/portfolio.html">Latest Posts</a>
+    </div>
+    <div class="col-4_sm-12 box-img">
+      <!-- ADD BACKGROUND IMAGE -->
+    </div>
+    <div class="col-4_sm-12-middle">
+      <h3> Nerd Alert</h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
+      <a target="blank"class="button center-text" href="/portfolio">Portfolio</a>
+    </div>
+  </div> <!-- end grid -->
+  <div class="grid-equalHeight">
+    <div class="col box-img">
+      <!-- ADD BACKGROUND IMAGE -->
+    </div>
+    <div class="col-4_sm-12-middle">
+      <h3> Ride With Me </h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
+      <a target="blank"class="button center-text" href="#">Book Your Bike</a>
+    </div>
+    <div class="col-4_sm-12 box-img">
+      <!-- ADD BACKGROUND IMAGE -->
+    </div>
+  </div> <!-- end grid -->
+</section>
 
 <!-- Contact Section -->
 <section class="center-text featured">
