--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ featured-image_path: images/whitedesk.jpg
     <div class="col-4_sm-12-middle ">
       <h3> Blog </h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
-        <a target="blank"class="button center-text" href="/portfolio.html">Latest Posts</a>
+        <a target="blank"class="button center-text" href="/blog.html">Latest Posts</a>
     </div>
     <div class="col-4_sm-12 box-img">
       <!-- ADD BACKGROUND IMAGE -->
