--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@ featured-image_path: images/whitedesk.jpg
   <!-- TAGLINE SECTIONS -->
   <section class="quote featured center-text">
     <p>
-      "You may say that I'm a dreamer, but I'm not the only one"
+      <i class="fa fa-quote-left" aria-hidden="true"></i>
+      Being happy is my goal, greatness is my vision
+      <i class="fa fa-quote-right" aria-hidden="true"></i>
     </p>
   </section>
 
