--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ featured-image_path: images/whitedesk.jpg
     <h1>Hi, I'm Laura</h1>
 
     <p class="tagline">
-      Fitness Junkie - Coffee Enthusiast - Wannabe Rapper 
+      Fitness Junkie - Coffee Enthusiast - Wannabe Rapper
     </p>
 
     <p>
@@ -38,7 +38,7 @@ featured-image_path: images/whitedesk.jpg
     </p>
   </section>
 
- BLOG SECTION
+ <!-- BLOG SECTION -->
     <section class="container feedpost">
       <h2 class="centered"> This just in... </h2>
 
