--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ featured-image_path: images/whitedesk.jpg
 
       In ut massa at turpis ullamcorper scelerisque. In sed enim volutpat, tincidunt ante ac, dictum tellus. Donec imperdiet sagittis neque, id volutpat ipsum aliquam sit amet. Praesent sit amet consequat enim. Fusce felis dolor, faucibus eu quam ac, ullamcorper rhoncus ipsum. Pellentesque iaculis tincidunt quam, vel vehicula nulla elementum vitae. Nulla porta dignissim nibh, id auctor lectus varius ut. Duis et eleifend lacus, id lacinia tellus. Nam vehicula lectus hendrerit bibendum fermentum.
       <br />
+      <a target="blank"class="button center-text" href="/portfolio">Full Bio</a>
     </p>
     <br />
   </section>
@@ -86,14 +87,14 @@ featured-image_path: images/whitedesk.jpg
         <a target="blank"class="button center-text" href="/blog.html">Latest Posts</a>
     </div>
     <div class="col-4_sm-12 box-img">
-      <!-- ADD BACKGROUND IMAGE -->
+      <!-ADD BACKGROUND IMAGE -->
     <!-- </div>
     <div class="col-4_sm-12-middle">
       <h3> Nerd Alert</h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vestibulum dapibus felis, sed convallis turpis aliquam nec. </p>
       <a target="blank"class="button center-text" href="/portfolio">Portfolio</a>
     </div>
-  </div> <!-- end grid -->
+  </div> <! end grid -->
   <!-- <div class="grid-equalHeight">
     <div class="col box-img"> -->
       <!-- ADD BACKGROUND IMAGE -->
@@ -106,10 +107,11 @@ featured-image_path: images/whitedesk.jpg
     <div class="col-4_sm-12 box-img"> -->
       <!-- ADD BACKGROUND IMAGE -->
     <!-- </div>
-  </div> <!-- end grid --> -->
+  </div> <!-end grid --> -->
 <!-- </section>  --> -->
 
 <!-- Contact Section -->
+
 <section class="center-text">
   <h2>Say Hello</h2>
   <p>treganowanl@gmail.com</p>
