--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@ featured-image_path: images/whitedesk.jpg
     <div class="col-4_sm-12 box-img"> -->
       <!-- ADD BACKGROUND IMAGE -->
     <!-- </div>
-  </div> <!-end grid --> -->
-<!-- </section>  --> -->
+  </div> <!-end grid -->
+<!-- </section>  -->
+
 
 <!-- Contact Section -->
 
