--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@ featured-image_path: images/whitedesk.jpg
   <p class="centered">
 <iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="600" height="470" frameborder="0" allowtransparency="true"></iframe>
 </div>
-<p>
-  <hr />
-</p>
 </section>
 
 <!-- BOX IMAGES PROJECTS  -->
@@ -113,7 +110,7 @@ featured-image_path: images/whitedesk.jpg
 
 <!-- Contact Section -->
 
-<section class="center-text">
+<section class="center-text featured">
   <h2>Say Hello</h2>
   <p>treganowanl@gmail.com</p>
   <p><i class="fa fa-map-marker" aria-hidden="true"></i> Bangkok, Thailand </p>
