--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ featured-image_path: images/whitedesk.jpg
       In ut massa at turpis ullamcorper scelerisque. In sed enim volutpat, tincidunt ante ac, dictum tellus. Donec imperdiet sagittis neque, id volutpat ipsum aliquam sit amet. Praesent sit amet consequat enim. Fusce felis dolor, faucibus eu quam ac, ullamcorper rhoncus ipsum. Pellentesque iaculis tincidunt quam, vel vehicula nulla elementum vitae. Nulla porta dignissim nibh, id auctor lectus varius ut. Duis et eleifend lacus, id lacinia tellus. Nam vehicula lectus hendrerit bibendum fermentum.
       <br />
 
-      <a class="button center-text" href="../pdf/funresume.pdf">Resume</a>
+      <a target="blank" class="button center-text" href="../pdf/funresume.pdf">Resume</a>
       <a target="blank"class="button center-text" href="/portfolio">Portfolio</a>
     </p>
     <br />
