--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,11 @@
 layout: default
 description: portfolio
 ---
-<section>
+<section class="centered">
 <div>
 <h4>One Rule. One Rule Only.</h4>
 <h6 class="tagline">I Only work where I can wear yoga pants</h6>
-<p>Spandex are life nd my life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
+<p>Spandex are life. My life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
 <a class="button centered" href="../pdf/funresume.pdf">Download Resume</a>
 </div>
 </section>
@@ -15,13 +15,23 @@ description: portfolio
   <h4>I Code for Fun</h4>
   <div>
   <p>
-    My side hustle is freelancing websites. I build every website from scratch using Jekyll to pull it all together. Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar; always a work in progress. Here is what I am currently working on. Some are final products. Some are my deformed child.
+    My side hustle is freelancing websites. I build every website from scratch using Jekyll to pull it all together. Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress. <br /><br />Here is what I am currently working on. Some are final products. Some are still on the way to being beautiful.
   </p>
 </div>
 <!-- Link out to websites -->
-  <div id="test-pic" class="col-3"></div>
-    <div id="test-pic" class="col-3"></div>
-      <div id="test-pic" class="col-3"></div>
+<div class="centered">
+  <h4>Fiished Sites</h4>
+  <div id="lineabody" class="col-6"></div>
+  <div id="erinwright" class="col-6"></div>
+</div>
+
+<div class="centered">
+  <h4>Non-Profit Sites</h4>
+  <p>These sites are a work in progress. Feel free to take a look! </p>
+  <div>
+    <div id="freebirdcafe" class="col-6"></div>
+  </div>
+</div>
 
 </section>
 
@@ -30,6 +40,7 @@ description: portfolio
   <h4>Give Back</h4>
   <p>
     Do you know of a non-profit that needs a website? Since I am usually bouncing from place to place I volunteer my time by building sites for non-profit organizations. Currently working on Ageless Aviation Dreams Foundation. Will have a space available this fall. Email me with inquires.
+    <a class="button centered" href="treganowanl@gmail.com">Contact Me</a>
   </p>
   </div>
   <div class="col-6">
