--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@ description: portfolio
 </div>
 </section>
 
-<section class="grid-spaceBetween">
+<section class="grid">
   <h4>I Code for Fun</h4>
   <div>
   <p>
@@ -29,7 +29,7 @@ description: portfolio
   <h4>Non-Profit Sites</h4>
   <p>These sites are a work in progress. Feel free to take a look! </p>
   <div>
-    <div id="freebirdcafe" class="col-6"></div>
+    <div id="freebirdcafe"></div>
   </div>
 </div>
 
