--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@ layout: default
 description: portfolio
 ---
 <section class="centered">
-<div>
+<div class="centered">
 <h4>One Rule. One Rule Only.</h4>
 <h6 class="tagline">I Only work where I can wear yoga pants</h6>
 <p>Spandex are life. My life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
