--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,19 @@ description: portfolio
   </p>
 </div>
 <!-- Link out to websites -->
-<div class="centered">
-  <h4>Fiished Sites</h4>
-  <div id="lineabody" class="col-6"></div>
-  <div id="erinwright" class="col-6"></div>
+<div class="grid-center">
+  <div id="lineabody" class="col-3"></div>
+  <div id="erinwright" class="col-3"></div>
+  <div id="freebirdcafe" class="col-3"></div>
 </div>
 
-<div class="centered">
+<!-- <div class="centered">
   <h4>Non-Profit Sites</h4>
   <p>These sites are a work in progress. Feel free to take a look! </p>
   <div>
     <div id="freebirdcafe"></div>
   </div>
-</div>
+</div> -->
 
 </section>
 
