--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,15 @@ description: portfolio
   </p>
 </div>
 <!-- Link out to websites -->
-<div class="grid-center">
-  <div id="lineabody" class="col-3"></div>
-  <div id="erinwright" class="col-3"></div>
-  <div id="freebirdcafe" class="col-3"></div>
+<div class="grid-spaceBetween">
+  <a target="blank" href="www.lineabodycom">
+  <div id="lineabody" class="col-4"></div></a>
+
+  <div id="freebird" class="col-4"></div>
+
+  <a target="blank" href="www.erinwrightphotography.com">
+  <div id="erinwright" class="col-4"></div></a>
+
 </div>
 
 <!-- <div class="centered">
