--- a/portfolio.html
+++ b/portfolio.html
@@ -20,12 +20,12 @@ description: portfolio
 </div>
 <!-- Link out to websites -->
 <div class="grid-spaceBetween">
-  <a target="blank" href="www.lineabodycom">
+  <a target="blank" href="http://www.lineabodycom">
   <div id="lineabody" class="col-4"></div></a>
 
   <div id="freebird" class="col-4"></div>
 
-  <a target="blank" href="www.erinwrightphotography.com">
+  <a target="blank" href="http://www.erinwrightphotography.com">
   <div id="erinwright" class="col-4"></div></a>
 
 </div>
@@ -45,7 +45,7 @@ description: portfolio
   <h4>Give Back</h4>
   <p>
     Do you know of a non-profit that needs a website? Since I am usually bouncing from place to place I volunteer my time by building sites for non-profit organizations. Currently working on Ageless Aviation Dreams Foundation. Will have a space available this fall. Email me with inquires.
-    <a class="button centered" href="treganowanl@gmail.com">Contact Me</a>
+    <a class="button centered" href="mailto:treganowanl@gmail.com">Contact Me</a>
   </p>
   </div>
   <div class="col-6">
