--- a/portfolio.html
+++ b/portfolio.html
@@ -2,22 +2,34 @@
 layout: default
 description: portfolio
 ---
-<section class="centered">
-<div class="centered">
+<section class="grid-center">
+<div class="col-6">
 <h4>One Rule. One Rule Only.</h4>
 <h6 class="tagline">I Only work where I can wear yoga pants</h6>
 <p>Spandex are life. My life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
 <a class="button centered" href="../pdf/funresume.pdf">Download Resume</a>
 </div>
+
+<div class="col-6">
+  <p>
+    a picture will go here
+  </p>
+  <img class="about" src="images/biggie.jpg" />
+</div>
 </section>
 
 <section class="grid">
+  <div class="col-6">
   <h4>I Code for Fun</h4>
-  <div>
   <p>
     My side hustle is freelancing websites. I build every website from scratch using Jekyll to pull it all together. Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress. <br /><br />Here is what I am currently working on. Some are final products. Some are still on the way to being beautiful.
   </p>
 </div>
+<div class="col-6">
+
+</div>
+
+
 <!-- Link out to websites -->
 <div class="grid-spaceBetween">
   <a target="blank" href="http://www.lineabodycom">
