--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,14 @@ description: portfolio
 
 <section>
   <div>
-  <h4>I Code for Fun</h4>
+  <h4 class="centered-text">I Code for Fun</h4>
   <p>
     My side hustle is freelancing websites. I build every website from scratch using Jekyll to pull it all together. Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress. <br /><br />Here is what I am currently working on. Some are final products. Some are still on the way to being beautiful.
   </p>
 </div>
 
 <!-- Link out to websites -->
-<div class="grid-spaceBetween">
+<div class="grid-middle-spaceAround">
   <a target="blank" href="http://www.lineabodycom">
   <div id="lineabody" class="col-4"></div></a>
 
