--- a/portfolio.html
+++ b/portfolio.html
@@ -11,23 +11,22 @@ description: portfolio
 </div>
 
 <div class="col-6">
-  <p>
-    a picture will go here
-  </p>
-  <img class="about" src="images/biggie.jpg" />
+  <img class="about center-text" src="images/biggie.jpg" />
 </div>
 </section>
 
 <section>
   <div>
   <h4 class="centered-text">I Code for Fun</h4>
-  <p>
-    My side hustle is freelancing websites. I build every website from scratch using Jekyll to pull it all together. Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress. <br /><br />Here is what I am currently working on. Some are final products. Some are still on the way to being beautiful.
+  <p class="center-text">
+    My side hustle is freelancing websites. I build every website from scratch using Jekyll to pull it all together. Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress. <br /><br />Here is what I am currently working on. Some are final products. Some are still on the way to being beautiful. You can also take a look at my GitHub. I apologize in advance for the commit names. <br />
+    <i class="fa fa-github" aria-hidden="true"></i>
   </p>
 </div>
 
 <!-- Link out to websites -->
 <div class="grid-middle-spaceAround">
+
   <a target="blank" href="http://www.lineabodycom">
   <div id="lineabody" class="col-4"></div></a>
 
@@ -37,14 +36,6 @@ description: portfolio
   <div id="erinwright" class="col-4"></div></a>
 
 </div>
-
-<!-- <div class="centered">
-  <h4>Non-Profit Sites</h4>
-  <p>These sites are a work in progress. Feel free to take a look! </p>
-  <div>
-    <div id="freebirdcafe"></div>
-  </div>
-</div> -->
 
 </section>
 
