--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,8 @@ description: portfolio
 <section class="grid-center">
 <div class="col-6">
 <h4>One Rule. One Rule Only.</h4>
-<h6 class="tagline">I Only work where I can wear yoga pants</h6>
-<p>Spandex are life. My life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
+<h6 class="tagline">...yoga pants are my uniform</h6>
+<p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor sports program workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. Click below for a downloadable version of my resume.</p>
 <a class="button centered" href="../pdf/funresume.pdf">Download Resume</a>
 </div>
 
@@ -17,23 +17,29 @@ description: portfolio
 
 <section>
   <div>
-  <h4 class="centered-text">I Code for Fun</h4>
+  <h4 class="centered-text">Side Hustle</h4>
+  <p class="tagline">...I code for fun!</p>
   <p class="center-text">
-    My side hustle is freelancing websites. I build every website from scratch using Jekyll to pull it all together. Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress. <br /><br />Here is what I am currently working on. Some are final products. Some are still on the way to being beautiful. You can also take a look at my GitHub. I apologize in advance for the commit names. <br />
-    <i class="fa fa-github" aria-hidden="true"></i>
+    My side hustle is freelancing websites. I build every website is custom built using HTML5, CSS3, and bit of JavaScript. Jekyll pulls it all together - no website builders or templates here! If you want to know how I learned how to code in 10 days check out my blog post about <a target="blank" href="http://www.instituteofcode.com">The Institute of Code in Canngu, Bali.</a>
+
+    Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and moments when wonder why. And then it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress and eventually you are done and you are proud of them. Below are my portfolio sites, some are done... some are under construction. I'm not ashamed to show you the process! Check it out.  <br /><br /> You may also peep my GitHub. I apologize in advance for the commit names. <br />
+    <a target="blank" href="https://www.github.com/lauratreg"><i class="fa fa-github" aria-hidden="true"></i></a>
   </p>
 </div>
 
 <!-- Link out to websites -->
 <div class="grid-middle-spaceAround">
 
-  <a target="blank" href="http://www.lineabodycom">
-  <div id="lineabody" class="col-4"></div></a>
+  <a target="blank" href="http://www.lineabody.com">
+  <div id="lineabody" class="col-3"></div></a>
 
-  <div id="freebird" class="col-4"></div>
+  <div id="freebird" class="col-3"></div>
 
   <a target="blank" href="http://www.erinwrightphotography.com">
-  <div id="erinwright" class="col-4"></div></a>
+  <div id="erinwright" class="col-3"></div></a>
+
+  <a target="blank" href="#">
+  <div id="balmbeats" class="col-3"></div></a>
 
 </div>
 
