--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@ description: portfolio
     My side hustle is freelancing websites. I build every website is custom built using HTML5, CSS3, and bit of JavaScript. Jekyll pulls it all together - no website builders or templates here! If you want to know how I learned how to code in 10 days check out my blog post about <a target="blank" href="http://www.instituteofcode.com">The Institute of Code in Canngu, Bali.</a>
 
     Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and moments when wonder why. And then it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress and eventually you are done and you are proud of them. Below are my portfolio sites, some are done... some are under construction. I'm not ashamed to show you the process! Check it out.  <br /><br /> You may also peep my GitHub. I apologize in advance for the commit names. <br />
-    <a target="blank" href="https://www.github.com/lauratreg"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a target="blank" class="tagline" href="https://www.github.com/lauratreg"><i class="fa fa-github" aria-hidden="true"></i></a>
   </p>
 </div>
 
