--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@ description: portfolio
 </div>
 
 <!-- Link out to websites -->
-<div class="grid-middle">
+<div class="grid-middle-spaceBetween">
 
   <a target="blank" href="http://www.lineabody.com">
   <div id="lineabody" class="col-3"></div></a>
