--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ featured-image_path: images/whitedesk.jpg
 <!-- RANDOMNESS -->
 <section class="grid-centered">
 <div class="container feedpost col-6">
-<h2 class="centered"> Latest Posts </h2>
+<h2 class="centered underline"> Latest Posts </h2>
 <div class="grid blog-loop feedpost">
   {% for post in site.posts limit:2 %}
     <div class="feedpost">
@@ -90,7 +90,7 @@ featured-image_path: images/whitedesk.jpg
 </div>
 
 <div class="col-6 centered">
-  <h2>Latest Jams</h2>
+  <h2 class="underline">Latest Jams</h2>
   <p class="centered">
 <iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="600" height="470" frameborder="0" allowtransparency="true"></iframe>
 </div>
