--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@ description: portfolio
 ---
 <section class="grid-center">
 <div class="col-6">
-<h4>One Rule. One Rule Only.</h4>
+<h4 class="underline">One Rule. One Rule Only.</h4>
 <h6 class="tagline no-padding">...yoga pants are my uniform</h6>
 <p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor sports program workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. Click below for a downloadable version of my resume.</p>
 <a class="button centered" href="../pdf/funresume.pdf">Download Resume</a>
@@ -17,7 +17,7 @@ description: portfolio
 
 <section>
   <div>
-  <h4 class="centered-text">Side Hustle</h4>
+  <h4 class="centered-text underline">Side Hustle</h4>
   <p class="tagline center-text no-padding">...I code for fun!</p>
   <p class="center-text">
     My side hustle is freelancing websites. I build every website is custom built using HTML5, CSS3, and bit of JavaScript. Jekyll pulls it all together - no website builders or templates here! If you want to know how I learned how to code in 10 days check out my blog post about <a target="blank" href="http://www.instituteofcode.com">The Institute of Code in Canngu, Bali.</a>
@@ -47,14 +47,14 @@ description: portfolio
 
 <section class="grid">
   <div class="col-6">
-  <h4>Give Back</h4>
+  <h4 class="underline">Give Back</h4>
   <p>
     Do you know of a non-profit that needs a website? Since I am usually bouncing from place to place I volunteer my time by building sites for non-profit organizations. Currently working on Ageless Aviation Dreams Foundation. Will have a space available this fall. Email me with inquires.
     <a class="button centered" href="mailto:treganowanl@gmail.com">Contact Me</a>
   </p>
   </div>
   <div class="col-6">
-    <h4>Currently Learning</h4>
+    <h4 class="underline">Currently Learning</h4>
     <p>
       Continuously learning is something so important to me. No matter what role I'm in I like to stretch my mind, expand my horizons, and put my free time to good use.
     </p>
