--- a/portfolio.html
+++ b/portfolio.html
@@ -31,15 +31,15 @@ description: portfolio
 <div class="grid-spaceAround">
 
   <a target="blank" href="http://www.lineabody.com">
-  <div id="lineabody" class="col"></div></a>
+  <div id="lineabody" class="col-3"></div></a>
 
-  <div id="freebird" class="col"></div>
+  <div id="freebird" class="col-3"></div>
 
   <a target="blank" href="http://www.erinwrightphotography.com">
-  <div id="erinwright" class="col"></div></a>
+  <div id="erinwright" class="col-3"></div></a>
 
   <a target="blank" href="#">
-  <div id="balmbeats" class="col"></div></a>
+  <div id="balmbeats" class="col-3"></div></a>
 
 </div>
 
