fonts and colors

--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,8 @@ layout: default
 title: Blog
 ---
 <section class="container feedpost">
-  <h4 class="centered feedpost"> Random Ramblings </h4>
-  <p "tagline">I don't have a niche. I have a voice.</p>
+  <h2 class="centered feedpost"> Random Ramblings </h2>
+  <p class="tagline">I don't have a niche. I have a voice.</p>
 
   <div class="grid blog-loop feedpost">
     {% for post in site.posts limit:12 %}
