--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 ---
 <section class="container feedpost">
-  <h2 class="centered feedpost"> Random Ramblings </h2>
+  <h2 class="centered feedpost"> Welcome to da blog</h2>
   <p class="tagline">I don't have a niche. I have a voice.</p>
 
   <div class="grid blog-loop feedpost">
