--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@ description: portfolio
 <a class="button centered" href="../pdf/funresume.pdf">Download Resume</a>
 </div>
 
-<div class="col-6">
+<div class="col-6 mob-hide">
   <img class="about center-text" src="images/biggie.jpg" />
 </div>
 <hr />
@@ -32,32 +32,32 @@ description: portfolio
 <div class="grid-spaceAround">
 
   <a target="blank" href="http://www.lineabody.com">
-  <div id="lineabody" class="col-3"></div></a>
+  <div id="lineabody" class="col-3_sm-12"></div></a>
 
-  <div id="freebird" class="col-3"></div>
+  <div id="freebird" class="col-3_sm-12"></div>
 
   <a target="blank" href="http://www.erinwrightphotography.com">
-  <div id="erinwright" class="col-3"></div></a>
+  <div id="erinwright" class="col-3 mob-hide"></div></a>
 
   <a target="blank" href="#">
-  <div id="balmbeats" class="col-3"></div></a>
+  <div id="balmbeats" class="col-3 mob-hide"></div></a>
 
 </div>
 
 </section>
 
 <section class="grid">
-  <div class="col-6">
+  <div class="col-6_sm-12">
   <h4 class="underline">Give Back</h4>
   <p>
-    Do you know of a non-profit that needs a website? Since I am usually bouncing from place to place I volunteer my time by building sites for non-profit organizations. Currently working on Ageless Aviation Dreams Foundation. Will have a space available this fall. Email me with inquires.
-    <a class="button centered" href="mailto:treganowanl@gmail.com">Contact Me</a>
+    Do you know of an organization that would love a FREE website? Currently working on Ageless Aviation Dreams Foundation. I will have space to take on another project this fall. Please contact me with any organizations that could use a bosst in their online presence.
+    <a class="button centered" href="mailto:treganowanl@gmail.com">Email Me</a>
   </p>
   </div>
-  <div class="col-6">
+  <div class="col-6_sm-12">
     <h4 class="underline">Currently Learning</h4>
     <p>
-      Continuously learning is something so important to me. No matter what role I'm in I like to stretch my mind, expand my horizons, and put my free time to good use.
+      Continuously learning is something so important to me. No matter what role I'm in I like to stretch my mind, expand my horizons, and put my free time (between Netflix shows) to good use.
     </p>
     <ul>
       <li>JavaScript - Udemy</li>
