--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@ featured-image_path: images/whitedesk.jpg
     </p>
 
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisl nulla, pulvinar a dui id, rutrum sollicitudin leo. Nam a leo feugiat, facilisis risus sit amet, rhoncus est. In sed vehicula nulla, a facilisis urna. Vestibulum ac ornare mauris. Quisque arcu ligula, aliquam at rutrum a, rutrum eu est. Donec sodales elementum finibus. Quisque accumsan venenatis arcu a feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut et efficitur quam. Vestibulum id est rutrum, placerat nibh eget, sollicitudin neque. Vestibulum rhoncus risus ac urna fermentum porttitor. Nunc sed ullamcorper diam, et consequat quam. Praesent convallis eget orci sagittis feugiat.
+      Welcome to my website, which has no specific purpose other then to show you how cool I am. I also coded this entire site all my myself and wanted to show it off. Also, I wanted to this to show up on Google instead of my ski-racing times from when I was 8 or my incredibly flattering college photos. Sometimes I blog, which is mainly feelings about various happenings in my world. Ultimately this site emcompasses me: a creative mess. I'm not always buttoned up, my entire day revolves around when I am going to get coffee, I love a new challenge, and I really like to be on the move. I tend to see the good things in life and try to spread kindness like it's glitter. Sometimes I get overwhelmed due to the sheer amount of ideas in my head but when I set my mind to something it sure as hell happens. See what I meant when I said creative mess?  
+      <br />
 
-      Fusce congue ultrices mauris vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna non imperdiet scelerisque. Sed fermentum massa a enim dictum, ac pharetra nisi egestas. Nam et eros ut quam auctor sagittis a cursus ex. In fringilla libero nisl, id bibendum est auctor sed. Nulla pharetra imperdiet cursus. Mauris suscipit malesuada elit in dignissim. Morbi aliquet augue ut est finibus molestie.
+      I've been living in Asia for the past year. I've done everything from teach english, to learn how to code, to teach indoor cycling in Bangkok - mostly I've spent the last year traveling. My biggest goal in life is to hit 30 countries before I turn 30. Next up are Myanmar, Malaysia, and Singapore.
 
-      In ut massa at turpis ullamcorper scelerisque. In sed enim volutpat, tincidunt ante ac, dictum tellus. Donec imperdiet sagittis neque, id volutpat ipsum aliquam sit amet. Praesent sit amet consequat enim. Fusce felis dolor, faucibus eu quam ac, ullamcorper rhoncus ipsum. Pellentesque iaculis tincidunt quam, vel vehicula nulla elementum vitae. Nulla porta dignissim nibh, id auctor lectus varius ut. Duis et eleifend lacus, id lacinia tellus. Nam vehicula lectus hendrerit bibendum fermentum.
+
       <br />
 
       <a target="blank" class="button center-text" href="../pdf/funresume.pdf">Resume</a>
@@ -36,8 +37,9 @@ featured-image_path: images/whitedesk.jpg
   <section class="quote featured center-text">
     <p>
       <i class="fa fa-quote-left" aria-hidden="true"></i>
-      Being happy is my goal, greatness is my vision - Childish Gambino
-      <i class="fa fa-quote-right" aria-hidden="true"></i>
+      Being happy is my goal, greatness is my vision
+      <i class="fa fa-quote-right" aria-hidden="true"></i><br />
+      Childish Gambino
     </p>
   </section>
 
@@ -72,7 +74,7 @@ featured-image_path: images/whitedesk.jpg
 <!-- RANDOMNESS -->
 <section class="grid-centered">
 <div class="container feedpost col-6">
-<h2 class="centered underline"> Latest Posts </h2>
+<h2 class="centered underline">Latest Posts </h2>
 <div class="grid blog-loop feedpost">
   {% for post in site.posts limit:2 %}
     <div class="feedpost">
