--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ featured-image_path: images/whitedesk.jpg
     </p>
 
     <p>
-      Welcome to my website, which has no specific purpose other then to show you how cool I am. I also coded this entire site all my myself and wanted to show it off. Also, I wanted to this to show up on Google instead of my ski-racing times from when I was 8 or my incredibly flattering college photos. Sometimes I blog, which is mainly feelings about various happenings in my world. Ultimately this site emcompasses me: a creative mess. I'm not always buttoned up, my entire day revolves around when I am going to get coffee, I love a new challenge, and I really like to be on the move. I tend to see the good things in life and try to spread kindness like it's glitter. Sometimes I get overwhelmed due to the sheer amount of ideas in my head but when I set my mind to something it sure as hell happens. See what I meant when I said creative mess?  
-      <br />
+      Welcome to my website, which has no specific purpose other then to show you how cool I am. I also coded this entire site all my myself and wanted to show it off. Also, I wanted to this to show up on Google instead of my ski-racing times from when I was 8 or my incredibly flattering college photos. Sometimes I blog, which is mainly feelings about various happenings in my world. Ultimately this site emcompasses me: a creative mess. I'm not always buttoned up, my entire day revolves around when I am going to get coffee, I love a new challenge, and I really like to be on the move. I am an instructor so naturally I love to tell people what to do. I tend to see the good things in life and try to spread kindness like it's glitter. Sometimes I get overwhelmed due to the sheer amount of ideas in my head but when I set my mind to something it sure as hell happens. See what I meant when I said creative mess?
+      <br /> <br />
 
       I've been living in Asia for the past year. I've done everything from teach english, to learn how to code, to teach indoor cycling in Bangkok - mostly I've spent the last year traveling. My biggest goal in life is to hit 30 countries before I turn 30. Next up are Myanmar, Malaysia, and Singapore.
 
