--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,7 @@ description: portfolio
   <div class="col-6_sm-12">
   <h4 class="underline">Give Back</h4>
   <p>
-    Do you know of an organization that would love a FREE website? Currently working on Ageless Aviation Dreams Foundation. I will have space to take on another project this fall. Please contact me with any organizations that could use a bosst in their online presence.
-    <a class="button centered" href="mailto:treganowanl@gmail.com">Email Me</a>
+    Do you know of an organization that would love a FREE website? Currently working on Ageless Aviation Dreams Foundation. I will have space to take on another project this fall. Please <a href="/index.html">contact me</a> with any organizations that could use a bosst in their online presence.
   </p>
   </div>
   <div class="col-6_sm-12">
