--- a/portfolio.html
+++ b/portfolio.html
@@ -6,16 +6,16 @@ description: portfolio
 <div class="col-6">
 <h4 class="underline">One Rule. One Rule Only.</h4>
 <h6 class="tagline no-padding">...yoga pants are my uniform</h6>
-<p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor sports program workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. Click below for a downloadable version of my resume.</p>
-<a class="button centered" href="../pdf/funresume.pdf">Download Resume</a>
+<p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. All from the comfort of my Lulu's. Click below for a downloadable version of my resume.</p>
+<a class="button centered" href="../pdf/funresume.pdf">Resume</a>
 </div>
 
 <div class="col-6 mob-hide">
   <img class="about center-text" src="images/biggie.jpg" />
 </div>
-<hr />
-</section>
 
+</section>
+<hr />
 <section>
   <div>
   <h4 class="centered-text underline">Side Hustle</h4>
@@ -32,15 +32,15 @@ description: portfolio
 <div class="grid-spaceAround">
 
   <a target="blank" href="http://www.lineabody.com">
-  <div id="lineabody" class="col-3_sm-12"></div></a>
+  <div id="lineabody" class="col-4_sm-12"></div></a>
 
-  <div id="freebird" class="col-3_sm-12"></div>
+  <div id="freebird" class="col-4_sm-12"></div>
 
   <a target="blank" href="http://www.erinwrightphotography.com">
-  <div id="erinwright" class="col-3 mob-hide"></div></a>
+  <div id="erinwright" class="col-4 mob-hide"></div></a>
 
-  <a target="blank" href="#">
-  <div id="balmbeats" class="col-3 mob-hide"></div></a>
+  <!-- <a target="blank" href="#">
+  <div id="balmbeats" class="col-3 mob-hide"></div></a> -->
 
 </div>
 
