--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,12 @@ description: portfolio
 <div class="grid-spaceAround">
 
   <a target="blank" href="http://www.lineabody.com">
-  <div id="lineabody" class="col-4_sm-12"></div></a>
+  <div id="lineabody" class="col-4_sm-12 porfolio"></div></a>
 
-  <div id="freebird" class="col-4_sm-12"></div>
+  <div id="freebird" class="col-4_sm-12 porfolio"></div>
 
   <a target="blank" href="http://www.erinwrightphotography.com">
-  <div id="erinwright" class="col-4 mob-hide"></div></a>
+  <div id="erinwright" class="col-4 mob-hide portfolio"></div></a>
 
   <!-- <a target="blank" href="#">
   <div id="balmbeats" class="col-3 mob-hide"></div></a> -->
