--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,9 @@ description: portfolio
 </div>
 
 </section>
-<hr />
+
 <section>
+  <hr />
   <div>
   <h4 class="centered-text underline">Side Hustle</h4>
   <p class="tagline center-text no-padding">...I code for fun!</p>
@@ -32,15 +33,15 @@ description: portfolio
 <div class="grid-spaceAround">
 
   <a target="blank" href="http://www.lineabody.com">
-  <div id="lineabody" class="col-4_sm-12 porfolio"></div></a>
+  <div id="lineabody" class="col-3_sm-12 porfolio"></div></a>
 
-  <div id="freebird" class="col-4_sm-12 porfolio"></div>
+  <div id="freebird" class="col-3_sm-12 porfolio"></div>
 
   <a target="blank" href="http://www.erinwrightphotography.com">
-  <div id="erinwright" class="col-4 mob-hide portfolio"></div></a>
+  <div id="erinwright" class="col-3 mob-hide portfolio"></div></a>
 
-  <!-- <a target="blank" href="#">
-  <div id="balmbeats" class="col-3 mob-hide"></div></a> -->
+  <a target="blank" href="#">
+  <div id="balmbeats" class="col-3 mob-hide"></div></a>
 
 </div>
 
