--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,13 @@ description: portfolio
 <section class="grid-center">
 <div class="col-6">
 <h4 class="underline">One Rule. One Rule Only.</h4>
-<h6 class="tagline no-padding">...yoga pants are my uniform</h6>
-<p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. All from the comfort of my Lulu's. Click below for a downloadable version of my resume.</p>
-<a class="button centered" href="../pdf/funresume.pdf">Resume</a>
+<p class="tagline">...yoga pants are my uniform</p>
+<p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. All from the comfort of my Lulu's.</p>
+<a class="button centered" href="../pdf/funresume.pdf"> Download Resume</a>
 </div>
 
 <div class="col-6 mob-hide">
-  <img class="about center-text" src="images/biggie.jpg" />
+  <img class="about right-text" src="images/biggie.jpg" />
 </div>
 
 </section>
